<resources>
    <string name="app_name">TipApp</string>
    <string name="amazing_20">Amazing (20 %)</string>
    <string name="good_18">Good (18 %)</string>
    <string name="okay_15">Okay (15 %)</string>
    <string name="round_the_tip">Round the Tip.</string>
    <string name="tip_calculator_app">Tip Calculator App</string>
    <string name="cost_of_services">Cost of Services</string>
    <string name="how_was_the_services">How was the Services ?</string>
    <string name="tip_amount">Tip Amount: %s</string>
    <string name="calculate">Calculate</string>
</resources>